--- a/src/main/java/vista/interfaces/Proyectos.fxml
+++ b/src/main/java/vista/interfaces/Proyectos.fxml
@@ -117,18 +117,7 @@
                            <center>
 	                      	   <GridPane alignment="TOP_CENTER" BorderPane.alignment="CENTER">
 	                              <children>
-	                                 <Label text="Director/a">
-	                                    <GridPane.margin>
-	                                       <Insets right="10.0" />
-	                                    </GridPane.margin>
-	                                 </Label>
-	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
-	                                 <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2">
-	                                    <GridPane.margin>
-	                                       <Insets left="10.0" />
-	                                    </GridPane.margin>
-	                                 </Button>
-	                                 <Label text="Codirector/a" GridPane.rowIndex="1">
+	                                 <Label text="Director/a" GridPane.rowIndex="1">
 	                                    <GridPane.margin>
 	                                       <Insets right="10.0" />
 	                                    </GridPane.margin>
@@ -139,34 +128,47 @@
 	                                       <Insets left="10.0" />
 	                                    </GridPane.margin>
 	                                 </Button>
-	                                 <Label text="Estado" GridPane.rowIndex="2" />
-	                                 <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-	                                 <Label text="Disposición" GridPane.rowIndex="3">
+	                                 <Label text="Codirector/a" GridPane.rowIndex="2">
 	                                    <GridPane.margin>
 	                                       <Insets right="10.0" />
 	                                    </GridPane.margin>
 	                                 </Label>
-	                                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-	                                 <Label text="Fecha de presentación" GridPane.rowIndex="4">
+	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+	                                 <Button mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
+	                                    <GridPane.margin>
+	                                       <Insets left="10.0" />
+	                                    </GridPane.margin>
+	                                 </Button>
+	                                 <Label text="Estado" GridPane.rowIndex="3" />
+	                                 <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+	                                 <Label text="Disposición" GridPane.rowIndex="4">
 	                                    <GridPane.margin>
 	                                       <Insets right="10.0" />
 	                                    </GridPane.margin>
 	                                 </Label>
-	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                    <Label layoutX="67.0" layoutY="137.0" text="Fecha de aprobación" GridPane.columnIndex="2" GridPane.rowIndex="4">
+	                                 <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+	                                 <Label text="Fecha de presentación" GridPane.rowIndex="5">
+	                                    <GridPane.margin>
+	                                       <Insets right="10.0" />
+	                                    </GridPane.margin>
+	                                 </Label>
+	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                    <Label layoutX="67.0" layoutY="137.0" text="Fecha de aprobación" GridPane.columnIndex="2" GridPane.rowIndex="5">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Label>
-	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                                    <Label layoutX="127.0" layoutY="137.0" text="Fecha de inicio" GridPane.rowIndex="5" />
-                                    <DatePicker layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                    <Label layoutX="466.0" layoutY="137.0" text="Fecha de finalización" GridPane.columnIndex="2" GridPane.rowIndex="5">
+	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                                    <Label layoutX="127.0" layoutY="137.0" text="Fecha de inicio" GridPane.rowIndex="6" />
+                                    <DatePicker layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                    <Label layoutX="466.0" layoutY="137.0" text="Fecha de finalización" GridPane.columnIndex="2" GridPane.rowIndex="6">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Label>
-                                    <DatePicker layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                                    <DatePicker layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                                    <Label text="Nombre" />
+                                    <TextField promptText="Ingrese el nombre del proyecto" GridPane.columnIndex="1" />
 	                              </children>
 	                              <columnConstraints>
 	                                 <ColumnConstraints hgrow="NEVER" />
@@ -177,6 +179,7 @@
 	                                 <ColumnConstraints />
 	                              </columnConstraints>
 	                              <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" />
 	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
 	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
 	                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" />
