--- a/src/main/java/vista/interfaces/Usuarios.fxml
+++ b/src/main/java/vista/interfaces/Usuarios.fxml
@@ -12,7 +12,7 @@
          <children>
             <Label styleClass="label-border" text="Información del usuario">
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </VBox.margin>
             </Label>
             <GridPane alignment="CENTER" styleClass="pane-border">
@@ -120,7 +120,7 @@
             </GridPane>
             <Label styleClass="label-border" text="Roles del usuario">
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </VBox.margin>
             </Label>
             <GridPane styleClass="pane-border" VBox.vgrow="ALWAYS">
