--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -108,7 +108,7 @@
                                     <ColumnConstraints hgrow="SOMETIMES" />
                                  </columnConstraints>
                                  <rowConstraints>
-                                    <RowConstraints minHeight="30.0" vgrow="NEVER" />
+                                    <RowConstraints vgrow="NEVER" />
                                     <RowConstraints vgrow="NEVER" />
                                     <RowConstraints vgrow="NEVER" />
                                     <RowConstraints vgrow="SOMETIMES" />
@@ -134,7 +134,7 @@
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints />
+                                          <RowConstraints minHeight="30.0" />
                                        </rowConstraints>
                                     </GridPane>
                                     <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="1">
@@ -150,7 +150,7 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </Label>
-                                          <TextField editable="false" focusTraversable="false" maxWidth="1.7976931348623157E308" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -430,18 +430,17 @@
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <top>
-                              <GridPane alignment="TOP_CENTER" vgap="5.0" BorderPane.alignment="CENTER">
+                              <GridPane alignment="TOP_CENTER" hgap="10.0" BorderPane.alignment="CENTER">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="NEVER" minWidth="-Infinity" />
-                                  <ColumnConstraints hgrow="ALWAYS" maxWidth="685.0" minWidth="10.0" prefWidth="685.0" />
+                                  <ColumnConstraints hgrow="NEVER" minWidth="50.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="200.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints minHeight="-Infinity" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
+                                  <RowConstraints minHeight="30.0" />
                                 </rowConstraints>
                                  <children>
-                                    <Label text="Categoría de investigación" GridPane.rowIndex="1" />
-                                    <TextField editable="false" focusTraversable="false" minWidth="-Infinity" mouseTransparent="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                                    <Label text="Categoría de investigación" />
+                                    <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
                                  </children>
                                  <BorderPane.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -529,7 +528,7 @@
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <center>
-                              <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                              <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Ingrese aquí las observaciones" BorderPane.alignment="CENTER">
                                  <BorderPane.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </BorderPane.margin>
