--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -110,8 +110,6 @@
                                  <rowConstraints>
                                     <RowConstraints vgrow="NEVER" />
                                     <RowConstraints vgrow="NEVER" />
-                                    <RowConstraints vgrow="NEVER" />
-                                    <RowConstraints vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
                                     <GridPane hgap="10.0">
@@ -126,9 +124,9 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </Button>
+                                          <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales" />
                                        </children>
                                        <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -202,59 +200,7 @@
                                           <Insets />
                                        </GridPane.margin>
                                     </GridPane>
-                                    <Label styleClass="label-border" stylesheets="@Style.css" text="Títulos" GridPane.rowIndex="2" />
-                                    <GridPane styleClass="pane-border" vgap="10.0" GridPane.rowIndex="3">
-                                       <columnConstraints>
-                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                       </columnConstraints>
-                                       <rowConstraints>
-                                          <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-                                          <RowConstraints vgrow="SOMETIMES" />
-                                       </rowConstraints>
-                                       <children>
-                                          <GridPane hgap="10.0">
-                                            <columnConstraints>
-                                                <ColumnConstraints hgrow="NEVER" />
-                                              <ColumnConstraints hgrow="SOMETIMES" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="50.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="50.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                             <children>
-                                                <Label text="Título">
-                                                   <GridPane.margin>
-                                                      <Insets />
-                                                   </GridPane.margin>
-                                                </Label>
-                                                <TextField minWidth="300.0" promptText="Ingrese el nombre del título que desea agregar" GridPane.columnIndex="1" />
-                                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar título" GridPane.columnIndex="2">
-                                                   <GridPane.margin>
-                                                      <Insets />
-                                                   </GridPane.margin>
-                                                </Button>
-                                                <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar título" GridPane.columnIndex="3" GridPane.halignment="CENTER">
-                                                   <GridPane.margin>
-                                                      <Insets />
-                                                   </GridPane.margin>
-                                                </Button>
-                                             </children>
-                                          </GridPane>
-                                          <TableView GridPane.rowIndex="1">
-                                            <columns>
-                                              <TableColumn minWidth="-1.0" prefWidth="-1.0" text="Título" />
-                                              <TableColumn maxWidth="1000.0" minWidth="-1.0" prefWidth="-1.0" text="Mayor grado" />
-                                            </columns>
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
-                                          </TableView>
-                                       </children>
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </GridPane>
+                                    
                                  </children>
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
