Toques finales a las vistas

--- a/src/main/java/vista/interfaces/Login.fxml
+++ b/src/main/java/vista/interfaces/Login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<GridPane fx:id="mainPane" prefHeight="300.0" prefWidth="300.0" stylesheets="@Style.css" vgap="5.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="mainPane" prefHeight="300.0" prefWidth="300.0" stylesheets="@Style.css" vgap="5.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Login">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
