--- a/src/main/java/vista/interfaces/Roles.fxml
+++ b/src/main/java/vista/interfaces/Roles.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Roles">
    <content>
       <GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="450.0" vgap="10.0">
          <columnConstraints>
@@ -123,10 +123,10 @@
                         <TableView editable="true">
                           <columns>
                             <TableColumn editable="false" prefWidth="75.0" text="Módulo" />
+                              <TableColumn maxWidth="700.0" prefWidth="75.0" text="Ver" />
                             <TableColumn maxWidth="700.0" prefWidth="75.0" text="Crear" />
                               <TableColumn maxWidth="700.0" prefWidth="75.0" text="Modificar" />
                               <TableColumn maxWidth="700.0" prefWidth="75.0" text="Eliminar" />
-                              <TableColumn maxWidth="700.0" prefWidth="75.0" text="Listar" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
