--- a/src/main/java/vista/interfaces/Usuarios.fxml
+++ b/src/main/java/vista/interfaces/Usuarios.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="540.0" prefWidth="720.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="540.0" prefWidth="720.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Usuarios">
    <content>
       <VBox>
          <children>
