--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -103,7 +103,7 @@
                      <content>
                         <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" prefHeight="5000.0">
                            <content>
-                              <GridPane>
+                              <GridPane vgap="10.0">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" />
                                  </columnConstraints>
